2004-03-09  David Schleef  <ds@schleef.org>

	* docs/manual/dparams-app.xml:  Fix to handle double dparams.
	(bug #134863)

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: first bug fix due to major/minor bump

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump nano to 1

=== release 0.7.6 ===

2004-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* configure.ac:
          releasing 0.7.6, "Almost"
	* po/fr.po:
	* po/nl.po:
	* tools/Makefile.am:
	* tools/gst-feedback-m.m:
          unversioned source

2004-03-09  Johan Dahlin  <johan@gnome.org>

	Reviewed by: Thomas Vander Stichele

	* gst/gstelement.c (gst_element_class_init): register second
	parameter as GST_TYPE_G_ERROR instead of G_TYPE_POINTER, so
	language bindings can (de)marshall correctly.

	* gst/gsterror.h: Add GST_TYPE_G_ERROR and cleanup a little bit

	* gst/gsterror.c (gst_g_error_get_type): New function

	* gst/gstmarshal.list: Remove VOID:OBJECT,POINTER,STRING, replace
	with VOID:OBJECT,OBJECT,STRING 

2004-03-10  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/registries/gstxmlregistry.c: (gst_xml_registry_load):
	Free a leaked g_timer on early returns.

2004-03-08  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/advanced-types.xml:
	  Add cinepak description.

2004-03-07  David Schleef  <ds@schleef.org>

	* docs/random/mimetypes:  Added cinepak description

2004-03-07  Andy Wingo  <wingo@pobox.com>

	* gst/gstbin.c (gst_bin_remove): Debugging fixes.

	* gst/schedulers/gstoptimalscheduler.c (destroy_group): Assert
	there are no links to other groups when a group is destroyed.
	(gst_opt_scheduler_pad_unlink): If the unlink means an element is
	removed from a group, make sure the link count to elements linked
	to other pads is appropriately decremented. This really fixes
	#135672.

	The 1.60->1.61 patch has been reapplied in light of this fix.
