@@ -1,3 +1,11 @@
+2004-03-10  Johan Dahlin  <johan@gnome.org>
+
+	* gst/schedulers/gstoptimalscheduler.c
+	(gst_opt_scheduler_pad_unlink): Implement unlink for elements with
+	links to elements within the same group, so we can finally remove
+	that annoying warning. Refactor the code a little bit
+	(group_dec_links_for_element): Split out
+
 2004-03-09  David Schleef  <ds@schleef.org>
 
 	* docs/manual/dparams-app.xml:  Fix to handle double dparams.
